--- a/Assets/UI/MainMenu/MenuStyles.uss
+++ b/Assets/UI/MainMenu/MenuStyles.uss
@@ -69,6 +69,7 @@
     bottom: 0;
     right: 0;
     left: 0;
+    color: rgb(224, 214, 214);
 }
 
 .track-button {
@@ -84,6 +85,9 @@
     border-right-width: 0;
     border-top-width: 0;
     border-bottom-width: 0;
+    transition-property: background-color, border-color;
+    transition-duration: 0.25s, 0.25s;
+    transition-delay: 0.1s, 0.1s;
 }
 
 .track-container {
@@ -105,6 +109,20 @@
     margin-left: 0;
     margin-right: 5%;
     margin-top: 0;
+    transition-property: background-color, border-color;
+    transition-duration: 0.25s, 0.25s;
+    transition-delay: 0.1s, 0.1s;
+}
+
+.track-container:hover {
+    border-left-color: rgb(255, 18, 0);
+    border-right-color: rgb(255, 18, 0);
+    border-top-color: rgb(255, 18, 0);
+    border-bottom-color: rgb(255, 18, 0);
+}
+
+.track-container:hover .track-button {
+    background-color: rgb(255, 18, 0);
 }
 
 .settins-name {
@@ -181,7 +199,7 @@
 .tracks-section {
     transition-property: top, opacity, display;
     transition-duration: 0.25s, 0.15s, 0s;
-    transition-delay: 0.1s, 0.1s, 0;
+    transition-delay: 0.1s, 0.1s, 0s;
     opacity: 0;
     position: absolute;
     left: 0;
@@ -195,7 +213,7 @@
 .settings-section {
     transition-property: top, opacity, display;
     transition-duration: 0.25s, 0.15s, 0s;
-    transition-delay: 0.1s, 0.1s, 0;
+    transition-delay: 0.1s, 0.1s, 0s;
     opacity: 0;
     position: relative;
     left: 0;
@@ -209,7 +227,7 @@
 .about-section {
     transition-property: top, opacity, display;
     transition-duration: 0.25s, 0.15s, 0s;
-    transition-delay: 0.1s, 0.1s, 0;
+    transition-delay: 0.1s, 0.1s, 0s;
     opacity: 0;
     position: absolute;
     left: 0;
